# fractalbits-main

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml
api_server/: Cargo.toml
api_server/benches/rewrk/: Cargo.toml
api_server/benches/rewrk_rpc/: Cargo.toml
api_server/bucket_tables/: Cargo.toml
api_server/bucket_tables/src/: api_key_table.rs  lib.rs  table.rs
api_server/kv_client_traits/: Cargo.toml
api_server/kv_client_traits/src/: lib.rs
api_server/nss_rpc_client/: Cargo.toml  lib.rs
api_server/nss_rpc_client/src/: message.rs  rpc_client.rs
api_server/rpc_client/: Cargo.toml  lib.rs
api_server/rpc_client/bss/: Cargo.toml
api_server/rpc_client/bss/src/: conn_manager.rs  lib.rs  message.rs  rpc.rs
api_server/rpc_client/bss/tests/: blob_io.rs
api_server/rpc_client/common/: Cargo.toml  codec.rs  conn_manager.rs  rpc_client.rs
api_server/rpc_client/nss/: Cargo.toml  build.rs
api_server/rpc_client/rss/: Cargo.toml
api_server/rpc_client/src/: lib.rs  rpc_client.rs
api_server/rpc_client/storage_server/: Cargo.toml  build.rs
api_server/slotmap_conn_pool/src/: lib.rs
api_server/src/: api_key_routes.rs  blob_client.rs  blob_storage.rs  cache_mgmt.rs  codec.rs  config.rs  connection.rs  extract.rs  handler.rs  lib.rs  main.rs  message.rs  object_layout.rs  response_xml.rs  rpc_client.rs  ws_client.rs
api_server/src/blob_storage/: bss_only_single_az_storage.rs  bss_only_storage.rs  hybrid_single_az_storage.rs  hybrid_storage.rs  retry.rs  s3_express_multi_az_storage.rs  s3_express_multi_az_with_tracking.rs  s3_express_single_az_storage.rs  s3_express_storage.rs  s3_express_with_tracking.rs  s3_hybrid_single_az_storage.rs
api_server/src/bucket_tables/: table.rs
api_server/src/extract/: api_command.rs  api_signature.rs
api_server/src/handler/: bucket.rs  common.rs  delete.rs  endpoint.rs  get.rs  head.rs  list.rs  mpu.rs  post.rs  put.rs  session.rs
api_server/tests/: basic.rs  checksums.rs  chunk_signature_e2e.rs  common.rs  list.rs  multi_az_resilience.rs  multipart.rs  objects.rs
cdk/fractalbits-bootstrap/: Cargo.toml
cdk/fractalbits-bootstrap/src/: api_server.rs  bench_client.rs  bench_server.rs  bss_server.rs  common.rs  gui_server.rs  main.rs  nss_bench.rs  nss_server.rs  root_server.rs
cdk/fractalbits-meta/: package-lock.json
cdk/fractalbits-meta/lib/: fractalbits-meta-stack.ts
cdk/fractalbits-vpc/: cdk.context.json
cdk/fractalbits-vpc/lib/: ec2-utils.ts  fractalbits-bench-vpc-stack.ts  fractalbits-helper-stack.ts  fractalbits-meta-stack.ts  fractalbits-peering-stack.ts  fractalbits-vpc-stack.ts
cdk/fractalbits-vpc/scripts/: describe_stack.sh
cdk/s3-grant-fractalbits-builds-bucket/: cdk.json  package-lock.json  package.json
cdk/s3-grant-fractalbits-builds-bucket/lib/: s3-grant-fractalbits-builds-bucket-stack.ts
cdk/s3-grant-fractalbits-builds-bucket/test/: s3-grant-fractalbits-builds-bucket.test.ts
common/crates/aws_signature/: Cargo.toml
common/crates/data_blob_tracking/: Cargo.toml
common/protos/: bss_ops.proto  nss_ops.proto  rss_ops.proto
crates/api_server/: Cargo.toml
crates/api_server/src/: api_key_routes.rs  blob_client.rs  blob_storage.rs  cache_mgmt.rs  cache_registry.rs  config.rs  handler.rs  lib.rs  main.rs  object_layout.rs  runtime.rs
crates/api_server/tests/: checksums.rs  list.rs  multipart.rs  presigned.rs
crates/bench_rpc/: Cargo.toml
crates/common/aws_signature/: Cargo.toml
crates/common/data_types/: Cargo.toml
crates/common/rpc_auth/: Cargo.toml
crates/common/rpc_clients/client_common/: Cargo.toml
crates/common/rpc_clients/client_common/src/: generic_client.rs  io_uring.rs  io_uring_support.rs  lib.rs  transport.rs
crates/common/rpc_clients/client_common/src/io_uring/: reactor.rs
crates/common/rpc_clients/nss/: Cargo.toml
crates/common/rpc_clients/nss/src/: client.rs  rpc.rs  stats.rs
crates/docker-all-in-one/: Cargo.toml
crates/fractal-s3/: Cargo.toml  README.md
crates/fractal-s3/demo/: atomic_rename_demo.sh
crates/fractal-s3/src/: client.rs  commands.rs  main.rs  s3_path.rs
crates/fractal-s3/src/commands/: cp.rs  ls.rs  mb.rs  mv.rs  presign.rs  rb.rs  rm.rs
crates/fs_server/: Cargo.toml
crates/fs_server/fractal-fuse/: CHANGELOG.md  Cargo.toml  README.md
crates/fs_server/fractal-fuse/examples/: hello.rs
crates/fs_server/fractal-fuse/src/: abi.rs  dispatch.rs  filesystem.rs  lib.rs  mount.rs  passthrough.rs  ring.rs  session.rs  types.rs
crates/fs_server/fractal-nfs/: Cargo.toml
crates/fs_server/fractal-nfs/src/: dispatch.rs  lib.rs  nfs3_types.rs  nfs3_wire.rs  rpc.rs  xdr.rs
crates/fs_server/src/: backend.rs  cache.rs  config.rs  disk_cache.rs  error.rs  fs.rs  fuse_server.rs  inode.rs  main.rs  nfs_server.rs  rpc.rs  rpc_bss.rs  rpc_nss.rs  rpc_rss.rs  vfs.rs
crates/fuse_client/: Cargo.toml
crates/fuse_client/src/: backend.rs  cache.rs  config.rs  error.rs  fs.rs  inode.rs  main.rs  object_layout.rs
docs/: CLA.md  HACKING.md  ROADMAP.md  S3_API_COMPATIBILITY.md  on-prem-cluster-creation.md
docs/internals/: ARCHITECTURE.md
infra/alicloud-terraform/: compute.tf  iam.tf  instance_group.tf  loadbalancer.tf  main.tf  outputs.tf  polardb.tf  storage.tf  variables.tf  vpc.tf
infra/fractalbits-bootstrap/: Cargo.toml
infra/fractalbits-terraform/: compute.tf  firestore.tf  iam.tf  main.tf  mig.tf  outputs.tf  storage.tf  variables.tf  vpc.tf
infra/gcp-terraform/: compute.tf  iam.tf  loadbalancer.tf  main.tf  mig.tf  outputs.tf  storage.tf  variables.tf  vpc.tf
infra/oci-terraform/: compute.tf  iam.tf  instance_pool.tf  loadbalancer.tf  main.tf  nosql.tf  outputs.tf  storage.tf  variables.tf  vcn.tf
xtask/: Cargo.toml
xtask/src/: build.rs  cmd_bench.rs  cmd_build.rs  cmd_deploy.rs  cmd_docker.rs  cmd_git.rs  cmd_nightly.rs  cmd_prebuilt.rs  cmd_precheckin.rs  cmd_repo.rs  cmd_run_tests.rs  cmd_service.rs  cmd_tool.rs  deploy_bootstrap.rs  docker_build.rs  docker_utils.rs  etcd_utils.rs  firestore_utils.rs  main.rs
xtask/tools/: Cargo.toml
(+295 files in other folders)
