[package]
name = "fs_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fs_server"
path = "src/main.rs"

[dependencies]
fractal-fuse = { path = "fractal-fuse" }
fractal-nfs = { path = "fractal-nfs" }
compio-runtime.workspace = true
compio-net.workspace = true
compio-io.workspace = true
compio-buf = "0.8"
compio-fs = "0.11"

rpc_client_common = { workspace = true, default-features = false, features = ["compio-runtime"] }
rpc_client_bss = { workspace = true, default-features = false, features = ["compio-runtime"] }
rpc_client_nss = { workspace = true, default-features = false, features = ["compio-runtime"] }
rpc_client_rss = { workspace = true, default-features = false, features = ["compio-runtime"] }
volume_group_proxy = { workspace = true, default-features = false, features = ["compio-runtime"] }

nss_codec.workspace = true
file_ops.workspace = true
rss_codec.workspace = true
bss_codec.workspace = true
rpc_codec_common.workspace = true
data_types.workspace = true
metrics_wrapper.workspace = true

prost.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
moka = { version = "0.12", features = ["sync"] }
dashmap.workspace = true
uuid.workspace = true
config.workspace = true
rand.workspace = true
xxhash-rust.workspace = true
libc = "0.2"
nix = { version = "0.31", features = ["fs"] }

[dev-dependencies]
compio-macros = "0.1"
