[package]
name = "fractal-fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
io-uring = { git = "https://github.com/tokio-rs/io-uring", rev = "7ec7ae9" }
compio-runtime = { git = "https://github.com/compio-rs/compio", branch = "master", features = ["time"] }
compio-driver = { git = "https://github.com/compio-rs/compio", branch = "master", features = ["io-uring-sqe128"] }
compio-dispatcher = { git = "https://github.com/compio-rs/compio", branch = "master" }
compio-net = { git = "https://github.com/compio-rs/compio", branch = "master" }
compio-io = { git = "https://github.com/compio-rs/compio", branch = "master" }
compio-buf = { git = "https://github.com/compio-rs/compio", branch = "master" }
libc = "0.2"
nix = { version = "0.29", features = ["fs", "socket", "uio"] }
bytes = { workspace = true }
tracing = { workspace = true }
which = "7"
pin-project-lite = { workspace = true }
rpc_codec_common = { workspace = true }
data_types = { workspace = true }
