[package]
name = "fractal-nfs"
version = "0.1.0"
edition = "2024"
description = "Minimal NFSv3 server on compio runtime"
license = "Apache-2.0"
repository = "https://github.com/fractalbits-labs/fractalbits-main"

[dependencies]
compio-runtime = { version = "0.11", features = ["time"] }
compio-net = "0.11"
compio-io = "0.9"
compio-buf = "0.8"
bytes = "1"
tracing = "0.1"
libc = "0.2"
socket2 = { version = "0.6", features = ["all"] }
