[package]
name = "fractal-nfs"
version = "0.1.0"
edition = "2024"
description = "Minimal NFSv3 server on compio runtime"
license = "Apache-2.0"
repository = "https://github.com/fractalbits-labs/fractalbits-main"

[dependencies]
compio-runtime.workspace = true
compio-net.workspace = true
compio-io.workspace = true
compio-buf.workspace = true
bytes.workspace = true
tracing.workspace = true
libc.workspace = true
socket2.workspace = true
