[package]
name = "rpc_client_common"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-runtime"]
tokio-runtime = []
metrics = ["metrics_wrapper/metrics", "dep:metrics"]

[dependencies]
bytes.workspace = true
data_types.workspace = true
prost.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
metrics_wrapper.workspace = true
metrics = { workspace = true, optional = true }
parking_lot.workspace = true
strum.workspace = true
socket2.workspace = true
rpc_codec_common.workspace = true

[dev-dependencies]
bytemuck.workspace = true
xxhash-rust.workspace = true
