[package]
name = "rpc_client_nss"
version = "0.1.0"
edition = "2024"

[dependencies]
prost.workspace = true
bytes.workspace = true
data_types.workspace = true
tracing.workspace = true
rpc_client_common.workspace = true
nss_codec.workspace = true
rpc_codec_common.workspace = true
rpc_auth.workspace = true
